# Cmake_test

./: README.md
mutilprojects_test/: CMakeLists.txt
mutilprojects_test/project_1/: CMakeLists.txt  project_1.cpp  project_1.h
mutilprojects_test/project_2/: CMakeLists.txt
mutilprojects_test/project_2/include/: project_2.h
mutilprojects_test/project_2/src/: project_2.c
